# jp-stock-ml

./: .env.example  .gitignore  CLAUDE_CODE_PROMPT_COLLECTORS.md  CLAUDE_CODE_PROMPT_PHASE3.md  CLAUDE_CODE_PROMPT_Phase 2.md  README.md  pyproject.toml
config/: __init__.py  settings.py
docs/: DATA_COLLECTION.md  MODEL_TRAINING.md  OPERATIONS.md  REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: analyze_features.py  collect_historical.py  daily_update.py  init_database.py  optimize_params.py  predict.py  train_model.py
src/: __init__.py
src/collectors/: __init__.py  edinet_client.py  edinet_collector.py  edinet_parser.py  jquants_client.py  jquants_collector.py  master_collector.py  tdnet_client.py  tdnet_collector.py  trends_client.py  yfinance_client.py
src/database/: __init__.py  models.py
src/features/: __init__.py  builder.py  disclosure_features.py  edinet_features.py  fundamental.py  global_index_features.py  market.py  technical.py  trends_features.py
src/ml/: __init__.py  dataset.py  metrics.py  model.py  optimizer.py  walk_forward.py
src/utils/: __init__.py  date_utils.py
